--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -210,7 +210,7 @@
           </size>
          </property>
          <property name="text">
-          <string>The Dataset size is:</string>
+          <string>The Dataset Size is: 0</string>
          </property>
         </widget>
        </item>
@@ -223,7 +223,7 @@
           </size>
          </property>
          <property name="text">
-          <string>Sorting Using </string>
+          <string>Sorting Algorithm</string>
          </property>
         </widget>
        </item>
@@ -236,7 +236,7 @@
           </size>
          </property>
          <property name="text">
-          <string>Using:</string>
+          <string>Search Algorithm</string>
          </property>
         </widget>
        </item>
